# api/src/models/queue_get_params.rs
@@ -13,6 +13,8 @@
 
 #[derive(Clone, Debug, PartialEq, Serialize, Deserialize)]
 pub struct QueueGetParams {
+    #[serde(rename = "language", skip_serializing_if = "Option::is_none")]
+    pub language: Option<String>,
     #[serde(rename = "radio")]
     pub radio: bool,
     #[serde(rename = "authPath")]
@@ -24,6 +26,7 @@ pub struct QueueGetParams {
 impl QueueGetParams {
     pub fn new(radio: bool, auth_path: String, video_id: String) -> QueueGetParams {
         QueueGetParams {
+            language: None,
             radio,
             auth_path,
             video_id,
